--- a/index.html
+++ b/index.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>ROND</title>
+    <style>
+        body, a {
+            background-color: black;
+            color: greenyellow;
+        }
+
+        li {
+            list-style-type: none;
+            padding-bottom: 0.5em;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        a:hover {
+            background-color: greenyellow;
+            color: black;
+        }
+    </style>
 </head>
 <body>
-    Hello!
+<div>
+    <h4>Привет! Я Макс.</h4>
+    Мои проекты:
+    <ul>
+        <li><a target="_blank" href="https://invest.primorsky.ru/">Инвестиционный портал Приморского края</a></li>
+        <li><a target="_blank" href="https://invest-map.primorsky.ru/ru/">Инвестиционная карта Приморского края</a></li>
+        <li><a target="_blank" href="https://xn--b1ad4ba.xn--p1ai/">ДВ Строительные Системы</a></li>
+        <li><a target="_blank" href="https://nbc-group.vn/">NBC 1</a></li>
+        <li><a target="_blank" href="https://bimex.site/">BIMEX</a></li>
+        <li><a target="_blank" href="https://newdefriz.ru/">Новый Де-Фриз</a></li>
+        <li><a target="_blank" href="https://zakupki.dnsdevelopment.ru/purchase/list">ДНС Девелопмент закупки</a></li>
+        <li><a target="_blank" href="http://92.53.115.152/">Дом</a></li>
+        <li><a target="_blank" href="https://primathletics.ru/">Федерация легкой атлетики Приморского края</a></li>
+        <li><a target="_blank" href="https://expertdns.ru/">Управляющая компания ДНС Эксперт</a></li>
+        <li><a target="_blank" href="https://dskprim.ru/">Домостроительный комбинат «Приморье»</a></li>
+        <li><a target="_blank" href="https://dnsalpha.ru/">DNS Альфа</a></li>
+        <li><a target="_blank" href="https://rundnsrun.ru/">RunDnsRun</a></li>
+    </ul>
+</div>
+
+<div>
+    Мои контакты:
+    <ul>
+        <li><a target="_blank" href="mailto:rond5137@gmail.com">rond5137@gmail.com</a></li>
+
+    </ul>
+</div>
 </body>
 </html>
