--- a/wg.html
+++ b/wg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Windguru - Vladivostok</title>
 </head>
 <body>
     <script id="wg_fwdg_222023_100_1723006647101">
