--- a/wg.html
+++ b/wg.html
@@ -8,7 +8,7 @@
 <script id="wg_fwdg_222023_100_1723006647101">
     (function (window, document) {
         var loader = function () {
-            var arg = ["s=222023", "m=100", "uid=wg_fwdg_222023_100_1723006647101", "wj=knots", "tj=c", "waj=m", "tij=cm", "odh=0", "doh=24", "fhours=240", "hrsm=2", "vt=forecasts", "lng=ru", "idbs=1", "p=WINDSPD,GUST,SMER,TMP,TMPE,WCHILL,FLHGT,CDC,APCP1s,SLP,RH"];
+            var arg = ["s=222023", "m=100", "uid=wg_fwdg_222023_100_1723006647101", "wj=ms", "tj=c", "waj=m", "tij=cm", "odh=0", "doh=24", "fhours=240", "hrsm=2", "vt=forecasts", "lng=ru", "idbs=1", "p=WINDSPD,GUST,SMER,TMP,TMPE,WCHILL,FLHGT,CDC,APCP1s,SLP,RH"];
             var script = document.createElement("script");
             var tag = document.getElementsByTagName("script")[0];
             script.src = "https://www.windguru.cz/js/widget.php?" + (arg.join("&"));
