--- a/wg.html
+++ b/wg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Windguru - Vladivostok</title>
+    <link rel="icon" href="static/windguru-icon-512x512.png">
 </head>
 <body>
 
