--- a/wgprim.html
+++ b/wgprim.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Windguru - Primorye</title>
+    <link rel="icon" href="static/windguru-icon-512x512.png">
 </head>
 <body>
 <script id="wg_fwdg_222023_3_1723170004056">
