--- a/wg.html
+++ b/wg.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <title>Windguru - Vladivostok</title>
     <link rel="icon" href="static/windguru-icon-512x512.png">
+    <style>
+        .btn {
+            width: 8rem;
+        }
+
+        .btn_link {
+            color: black;
+            text-decoration: none;
+            font-size: 1rem;
+        }
+    </style>
 </head>
 <body>
-
+<div style="margin: 1rem">
+    <button class="btn"><a class="btn_link" href="/wgprim">Primorye</a></button>
+    <button class="btn"><a class="btn_link" href="/wgasia">Asia</a></button>
+</div>
 <script id="wg_fwdg_222023_3_1723007310317">
     (function (window, document) {
         var loader = function () {
