--- a/wgasia.html
+++ b/wgasia.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>Windguru - Asia</title>
     <link rel="icon" href="static/windguru-icon-512x512.png">
+    <link rel="apple-touch-icon" href="static/windguru-icon-512x512.png">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
+<div style="margin: 1rem">
+    <button class="btn"><a class="btn_link" href="/wgprim">Vladivostok</a></button>
+    <button class="btn"><a class="btn_link" href="/wgprim">Primorye</a></button>
+    <button class="btn active"><a class="btn_link" href="/wgasia">Asia</a></button>
+</div>
+
 <script id="wg_fwdg_413854_3_1727502153671">
     (function (window, document) {
         var loader = function () {
