--- a/wgprim.html
+++ b/wgprim.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Windguru - Primorye</title>
     <link rel="icon" href="static/windguru-icon-512x512.png">
+    <link rel="apple-touch-icon" href="static/windguru-icon-512x512.png">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
+<div style="margin: 1rem">
+    <button class="btn"><a class="btn_link" href="/wgprim">Vladivostok</a></button>
+    <button class="btn active"><a class="btn_link" href="/wgprim">Primorye</a></button>
+    <button class="btn"><a class="btn_link" href="/wgasia">Asia</a></button>
+</div>
+
 <script id="wg_fwdg_222023_3_1723170004056">
     (function (window, document) {
         var loader = function () {
