--- a/wgasia.html
+++ b/wgasia.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Windguru - Asia</title>
     <link rel="icon" href="static/windguru-icon-512x512.png">
     <link rel="apple-touch-icon" href="static/windguru-icon-512x512.png">
