--- a/wgprim.html
+++ b/wgprim.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div style="margin: 1rem">
-    <button class="btn"><a class="btn_link" href="/wgprim">Vladivostok</a></button>
+    <button class="btn"><a class="btn_link" href="/wg">Vladivostok</a></button>
     <button class="btn active"><a class="btn_link" href="/wgprim">Primorye</a></button>
     <button class="btn"><a class="btn_link" href="/wgasia">Asia</a></button>
 </div>
