--- a/wgprim.html
+++ b/wgprim.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-<div style="margin: 1rem">
+<div class="btn_div">
     <button class="btn"><a class="btn_link" href="/wg">Vladivostok</a></button>
     <button class="btn active"><a class="btn_link" href="/wgprim">Primorye</a></button>
     <button class="btn"><a class="btn_link" href="/wgasia">Asia</a></button>
