--- a/wg.html
+++ b/wg.html
@@ -12,7 +12,7 @@
 <div class="btn_div">
     <button class="btn active"><a class="btn_link" href="/wg">Vladivostok</a></button>
     <button class="btn"><a class="btn_link" href="/wgprim">Primorye</a></button>
-    <button class="btn"><a class="btn_link" href="/wgasia">Asia</a></button>
+    <button class="btn"><a class="btn_link" href="/wgasia">East Asia</a></button>
 </div>
 
 <script id="wg_fwdg_222023_3_1723007310317">
