--- a/wgasia.html
+++ b/wgasia.html
@@ -12,7 +12,7 @@
 <div class="btn_div">
     <button class="btn"><a class="btn_link" href="/wg">Vladivostok</a></button>
     <button class="btn"><a class="btn_link" href="/wgprim">Primorye</a></button>
-    <button class="btn active"><a class="btn_link" href="/wgasia">Asia</a></button>
+    <button class="btn active"><a class="btn_link" href="/wgasia">East Asia</a></button>
 </div>
 
 <script id="wg_fwdg_413854_3_1727502153671">
@@ -52,6 +52,19 @@
         };
         window.addEventListener ? window.addEventListener("load", loader, false) : window.attachEvent("onload", loader);
     })(window, document);
+</script>
+
+<script id="wg_fwdg_298527_3_1728011395444">
+(function (window, document) {
+  var loader = function () {
+    var arg = ["s=298527" ,"m=3","uid=wg_fwdg_298527_3_1728011395444" ,"wj=ms" ,"tj=c" ,"waj=m" ,"tij=cm" ,"odh=0" ,"doh=24" ,"fhours=240" ,"hrsm=2" ,"vt=forecasts" ,"lng=ru" ,"p=WINDSPD,GUST,MWINDSPD,SMER,TMP,TMPE,WCHILL,FLHGT,CDC,APCP1s,SLP,RH"];
+    var script = document.createElement("script");
+    var tag = document.getElementsByTagName("script")[0];
+    script.src = "https://www.windguru.cz/js/widget.php?"+(arg.join("&"));
+    tag.parentNode.insertBefore(script, tag);
+  };
+  window.addEventListener ? window.addEventListener("load", loader, false) : window.attachEvent("onload", loader);
+})(window, document);
 </script>
 
 </body>
