--- a/wgasia.html
+++ b/wgasia.html
@@ -54,6 +54,19 @@
     })(window, document);
 </script>
 
+<script id="wg_fwdg_263613_3_1728012048876">
+(function (window, document) {
+  var loader = function () {
+    var arg = ["s=263613" ,"m=3","uid=wg_fwdg_263613_3_1728012048876" ,"wj=ms" ,"tj=c" ,"waj=m" ,"tij=cm" ,"odh=0" ,"doh=24" ,"fhours=240" ,"hrsm=2" ,"vt=forecasts" ,"lng=ru" ,"p=WINDSPD,GUST,MWINDSPD,SMER,TMP,TMPE,WCHILL,FLHGT,CDC,APCP1s,SLP,RH"];
+    var script = document.createElement("script");
+    var tag = document.getElementsByTagName("script")[0];
+    script.src = "https://www.windguru.cz/js/widget.php?"+(arg.join("&"));
+    tag.parentNode.insertBefore(script, tag);
+  };
+  window.addEventListener ? window.addEventListener("load", loader, false) : window.attachEvent("onload", loader);
+})(window, document);
+</script>
+
 <script id="wg_fwdg_298527_3_1728011395444">
 (function (window, document) {
   var loader = function () {
