--- a/index.html
+++ b/index.html
@@ -34,24 +34,26 @@
         <li><a target="_blank" href="https://invest.primorsky.ru/">Инвестиционный портал Приморского края</a></li>
         <li><a target="_blank" href="https://invest-map.primorsky.ru/ru/">Инвестиционная карта Приморского края</a></li>
         <li><a target="_blank" href="https://xn--b1ad4ba.xn--p1ai/">ДВ Строительные Системы</a></li>
+        <li><a target="_blank" href="https://xn--80axz.xn--b1ad4ba.xn--p1ai/">ДВ Строительные Системы - МАФы</a></li>
         <li><a target="_blank" href="https://nbc-group.vn/">NBC 1</a></li>
         <li><a target="_blank" href="https://bimex.site/">BIMEX</a></li>
-        <li><a target="_blank" href="https://newdefriz.ru/">Новый Де-Фриз</a></li>
-        <li><a target="_blank" href="https://zakupki.dnsdevelopment.ru/purchase/list">ДНС Девелопмент закупки</a></li>
-        <li><a target="_blank" href="http://92.53.115.152/">Дом</a></li>
-        <li><a target="_blank" href="https://primathletics.ru/">Федерация легкой атлетики Приморского края</a></li>
-        <li><a target="_blank" href="https://expertdns.ru/">Управляющая компания ДНС Эксперт</a></li>
         <li><a target="_blank" href="https://dskprim.ru/">Домостроительный комбинат «Приморье»</a></li>
+        <li><a target="_blank" href="https://zakupki.dnsdevelopment.ru/">ДНС Девелопмент - Закупки</a></li>
+        <li><a target="_blank" href="https://monitoring.dskprim.ru/">ДНС Девелопмент - Мониторинг</a></li>
+        <li><a target="_blank" href="https://expertdns.ru/">Управляющая компания ДНС Эксперт</a></li>
+        <li><a target="_blank" href="https://newdefriz.ru/">Новый Де-Фриз</a></li>
         <li><a target="_blank" href="https://dnsalpha.ru/">DNS Альфа</a></li>
+        <li><a target="_blank" href="https://primathletics.ru/">Федерация легкой атлетики Приморского края</a></li>
         <li><a target="_blank" href="https://rundnsrun.ru/">RunDnsRun</a></li>
+        <li><a target="_blank" href="http://92.53.115.152/">Дом</a></li>
     </ul>
 </div>
 
 <div>
     Мои контакты:
     <ul>
+        <li><a target="_blank" href="https://t.me/rond5137">Telegram</a></li>
         <li><a target="_blank" href="mailto:rond5137@gmail.com">rond5137@gmail.com</a></li>
-
     </ul>
 </div>
 </body>
