update wg asia; rate;

--- a/wgasia.html
+++ b/wgasia.html
@@ -15,6 +15,21 @@
     <button class="btn active"><a class="btn_link" href="/wgasia">East Asia</a></button>
 </div>
 
+<!--Japan - Tokyo, GFS 13 km-->
+<script id="wg_fwdg_298527_3_1728011395444">
+(function (window, document) {
+  var loader = function () {
+    var arg = ["s=298527" ,"m=3","uid=wg_fwdg_298527_3_1728011395444" ,"wj=ms" ,"tj=c" ,"waj=m" ,"tij=cm" ,"odh=0" ,"doh=24" ,"fhours=240" ,"hrsm=2" ,"vt=forecasts" ,"lng=ru" ,"p=WINDSPD,GUST,MWINDSPD,SMER,TMP,TMPE,WCHILL,FLHGT,CDC,APCP1s,SLP,RH"];
+    var script = document.createElement("script");
+    var tag = document.getElementsByTagName("script")[0];
+    script.src = "https://www.windguru.cz/js/widget.php?"+(arg.join("&"));
+    tag.parentNode.insertBefore(script, tag);
+  };
+  window.addEventListener ? window.addEventListener("load", loader, false) : window.attachEvent("onload", loader);
+})(window, document);
+</script>
+
+<!--Korea, Democratic People's Republic of - Сеул Корея, GFS 13 km-->
 <script id="wg_fwdg_413854_3_1727502153671">
     (function (window, document) {
         var loader = function () {
@@ -28,6 +43,7 @@
     })(window, document);
 </script>
 
+<!--China - Пекин, GFS 13 km-->
 <script id="wg_fwdg_221406_3_1727502008367">
     (function (window, document) {
         var loader = function () {
@@ -41,6 +57,7 @@
     })(window, document);
 </script>
 
+<!--China - Шанхай, GFS 13 km-->
 <script id="wg_fwdg_333571_3_1727501907428">
     (function (window, document) {
         var loader = function () {
@@ -54,6 +71,7 @@
     })(window, document);
 </script>
 
+<!--China - Санья, GFS 13 km-->
 <script id="wg_fwdg_263613_3_1728012048876">
 (function (window, document) {
   var loader = function () {
@@ -67,10 +85,25 @@
 })(window, document);
 </script>
 
-<script id="wg_fwdg_298527_3_1728011395444">
+<!--China - ЧанБайШань-->
+<script id="wg_fwdg_339142_3_1744842848122">
 (function (window, document) {
   var loader = function () {
-    var arg = ["s=298527" ,"m=3","uid=wg_fwdg_298527_3_1728011395444" ,"wj=ms" ,"tj=c" ,"waj=m" ,"tij=cm" ,"odh=0" ,"doh=24" ,"fhours=240" ,"hrsm=2" ,"vt=forecasts" ,"lng=ru" ,"p=WINDSPD,GUST,MWINDSPD,SMER,TMP,TMPE,WCHILL,FLHGT,CDC,APCP1s,SLP,RH"];
+    var arg = ["s=339142" ,"m=3","uid=wg_fwdg_339142_3_1744842848122" ,"wj=ms" ,"tj=c" ,"waj=m" ,"tij=cm" ,"odh=0" ,"doh=24" ,"fhours=240" ,"hrsm=1" ,"vt=forecasts" ,"lng=ru" ,"p=WINDSPD,GUST,MWINDSPD,SMER,TMP,TMPE,WCHILL,FLHGT,CDC,APCP1s,SLP,RH"];
+    var script = document.createElement("script");
+    var tag = document.getElementsByTagName("script")[0];
+    script.src = "https://www.windguru.cz/js/widget.php?"+(arg.join("&"));
+    tag.parentNode.insertBefore(script, tag);
+  };
+  window.addEventListener ? window.addEventListener("load", loader, false) : window.attachEvent("onload", loader);
+})(window, document);
+</script>
+
+<!--China - Китай, Янцзы-->
+<script id="wg_fwdg_1259883_3_1744842960737">
+(function (window, document) {
+  var loader = function () {
+    var arg = ["s=1259883" ,"m=3","uid=wg_fwdg_1259883_3_1744842960737" ,"wj=ms" ,"tj=c" ,"waj=m" ,"tij=cm" ,"odh=0" ,"doh=24" ,"fhours=240" ,"hrsm=1" ,"vt=forecasts" ,"lng=ru" ,"p=WINDSPD,GUST,MWINDSPD,SMER,TMP,TMPE,WCHILL,FLHGT,CDC,APCP1s,SLP,RH"];
     var script = document.createElement("script");
     var tag = document.getElementsByTagName("script")[0];
     script.src = "https://www.windguru.cz/js/widget.php?"+(arg.join("&"));
