update index page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a target="_blank" href="https://invest-map.primorsky.ru/ru/">Инвестиционная карта Приморского края</a></li>
         <li><a target="_blank" href="https://xn--b1ad4ba.xn--p1ai/">ДВ Строительные Системы</a></li>
         <li><a target="_blank" href="https://xn--80axz.xn--b1ad4ba.xn--p1ai/">ДВ Строительные Системы - МАФы</a></li>
+        <li><a target="_blank" href="https://xn--h1aaffoencchp.xn--b1ad4ba.xn--p1ai/">ДВ Строительные Системы - Fixpistols</a></li>
         <li><a target="_blank" href="https://nbc-group.vn/">NBC 1</a></li>
         <li><a target="_blank" href="https://bimex.site/">BIMEX</a></li>
         <li><a target="_blank" href="https://dskprim.ru/">Домостроительный комбинат «Приморье»</a></li>
@@ -45,6 +46,7 @@
         <li><a target="_blank" href="https://dnsalpha.ru/">DNS Альфа</a></li>
         <li><a target="_blank" href="https://primathletics.ru/">Федерация легкой атлетики Приморского края</a></li>
         <li><a target="_blank" href="https://rundnsrun.ru/">RunDnsRun</a></li>
+        <li><a target="_blank" href="https://xn-----7kcbub0avemfdit.xn--p1ai/">Море на ладони</a></li>
         <li><a target="_blank" href="http://92.53.115.152/">Дом</a></li>
     </ul>
 </div>
